--- a/.github/actions/PublishGrantTasksPackage/action.yml
+++ b/.github/actions/PublishGrantTasksPackage/action.yml
@@ -10,3 +10,4 @@ runs:
            echo "python3 setup.py sdist bdist_wheel"
            echo "aws s3 cp ./dist/grantTasks-1.0-py3-none-any.whl s3://jd-us01-edl-databricks-artifacts-$env/edl-core-grants/dist/grantTasks-1.0-py3-none-any.whl --sse"
            echo "aws s3 cp ./Notebooks/services/async_grants.py s3://jd-us01-edl-databricks-artifacts-$env/edl-core-grants/async_grants.py --sse"
+      shell: bash      
