--- a/.github/actions/PublishGrantTasksPackage/action.yml
+++ b/.github/actions/PublishGrantTasksPackage/action.yml
@@ -10,8 +10,6 @@ runs:
     - uses: actions/checkout@v2
     - name: Publish grant tasks package
       run: |
-           echo "python3 -m pip install --user --upgrade setuptools wheel"
-           echo "python3 setup.py sdist bdist_wheel"
-           echo "aws s3 cp ./dist/grantTasks-1.0-py3-none-any.whl s3://jd-us01-edl-databricks-artifacts-${{ inputs.env }}/edl-core-grants/dist/grantTasks-1.0-py3-none-any.whl --sse"
-           echo "aws s3 cp ./Notebooks/services/async_grants.py s3://jd-us01-edl-databricks-artifacts-${{ inputs.env }}/edl-core-grants/async_grants.py --sse"
+          chmod +x ${{ github.action_path }}/publishgranttaskspackage.sh ${{ inputs.env }}
+          ${{ github.action_path }}/publishgranttaskspackage.sh
       shell: bash      
